Kubernetes/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-deployment
  labels:
    app: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: amritha172/healthyglam-comment_service:latest
        ports:
        - containerPort: 3002
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  ports:
  - port: 3002
    targetPort: 3002
  selector:
    app: comment-service
