Kubernetes/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
      - name: post-service
        image: amritha172/healthyglam-post_service:latest
        ports:
        - containerPort: 3003
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  ports:
  - port: 3003
    targetPort: 3003
  selector:
    app: post-service
