Kubernetes/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672

      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
  spec:
  containers:
    - name: rabbitmq
      image: rabbitmq:3-management
      ports:
        - containerPort: 5672
        - containerPort: 15672
      resources:
        limits:
          cpu: "0.5"
          memory: "512Mi"
        requests:
          cpu: "0.25"
          memory: "256Mi"
