Kubernetes/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
spec:
  rules:
    - host: <Host>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: <Service>
                port:
                  number: <Port>
